--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "main": "index.js",
   "scripts": {
     "dev": "nodemon ./src/index.ts",
+    "build": "tsc",
+    "start": "node ./public/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
