--- a/package.json
+++ b/package.json
@@ -37,5 +37,9 @@
     "path": "^0.12.7",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.0"
+  },
+  "engines": {
+    "node": "<= 16.20.0",
+    "npm": "<= 8.1.0"
   }
 }
