--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,7 @@
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
     "strict": true,
-    "target": "es2016"
+    "target": "ES6"
   },
   "include": ["./src/**/*"]
 }
